@@ -52,6 +52,8 @@ module ActionController #:nodoc:
       #   into the session's flash if the prerequisites cannot be satisfied.
       # * <tt>:redirect_to</tt>: the redirection parameters to be used when
       #   redirecting if the prerequisites cannot be satisfied.
+      # * <tt>:render</tt>: the render parameters to be used when
+      #   the prerequisites cannot be satisfied.
       # * <tt>:only</tt>: only apply this verification to the actions specified
       #   in the associated array (may also be a single value).
       # * <tt>:except</tt>: do not apply this verification to the actions
@@ -77,7 +79,10 @@ module ActionController #:nodoc:
 
       if prereqs_invalid
         flash.update(options[:add_flash]) if options[:add_flash]
-        redirect_to(options[:redirect_to]) if options[:redirect_to] unless performed?
+        unless performed?
+          render(options[:render]) if options[:render]
+          redirect_to(options[:redirect_to]) if options[:redirect_to]
+        end
         return false
       end
 
