@@ -1,5 +1,7 @@
 *SVN*
 
+* Support :render option for :verify #1440 [TobiasLuetke]
+
 * Updated vendor copy of html-scanner lib to 0.5.1, for bug fixes and optimizations
 
 * Changed test requests to come from 0.0.0.0 instead of 127.0.0.1 such that they don't trigger debugging screens on exceptions, but instead call rescue_action_in_public
